--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.livo</groupId>
-	<artifactId>eureka-service</artifactId>
+	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eureka-service</name>
 	<description>discovery of the Livo application&apos;s microservices</description>
