--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=config-server
+server.port=8888
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+# Local onde o Config Server vai buscar os arquivos de configuração
+spring.cloud.config.server.native.search-locations=classpath:/config
