--- a/exemplo-service/src/main/resources/application.properties
+++ b/exemplo-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=exemplo-service
+server.port=8083
+
+# Conecta ao Config Server
+spring.config.import=optional:configserver:http://localhost:8888
+
+# Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
