--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=config-server
 server.port=8888
 
-# Eureka
+# GitHub backend
+spring.cloud.config.server.git.uri=https://github.com/kauanper/livo-configs.git
+spring.cloud.config.server.git.clone-on-start=false
+spring.cloud.config.server.git.search-paths=config
+spring.cloud.config.server.prefix=/config
+
+# Eureka (opcional para se registrar no Eureka)
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-
-# Local onde o Config Server vai buscar os arquivos de configuração
-spring.cloud.config.server.native.search-locations=classpath:/config
