--- a/exemplo-service/src/main/resources/application.properties
+++ b/exemplo-service/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=exemplo-service
 
-# Conecta ao Config Server
+# Importa as configurações do Config Server (não esta funcionando ainda
 spring.config.import=optional:configserver:http://localhost:8888
 
-# Eureka Client
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
