--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 spring.application.name=discovery-server
-server.port=8888
+server.port=8761
 
-# Ativa o Git
-spring.cloud.config.server.git.uri=
-spring.cloud.config.server.git.clone-on-start=false
-spring.cloud.config.server.git.search-paths=config
-spring.cloud.config.server.prefix=/config
-
-# Eureka desligado (caso esteja junto no mesmo app)
+# Desativa comportamento de cliente
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+# Configurações extras
 eureka.instance.hostname=localhost
 eureka.server.enable-self-preservation=false
