--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.application.name=discovery-server
-server.port=8761
+spring.application.name=discovery-config-server
+server.port=8888
 
-# Desativa comportamento de cliente
+# Ativa o Git
+spring.cloud.config.server.git.uri=https://github.com/kauanper/livo-configs.git
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.search-paths=       # <- vazio (raiz)
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.prefix=/config
+
+# Eureka desligado (caso esteja junto no mesmo app)
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-
-# Configurações extras
 eureka.instance.hostname=localhost
 eureka.server.enable-self-preservation=false
