add: config para buscar no diretorio raiz

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 # Ativa o Git
 spring.cloud.config.server.git.uri=https://github.com/kauanper/livo-configs.git
 spring.cloud.config.server.git.clone-on-start=true
-spring.cloud.config.server.git.search-paths=       # <- vazio (raiz)
+spring.cloud.config.server.git.search-paths=config
 spring.cloud.config.server.git.default-label=main
 spring.cloud.config.server.prefix=/config
 
