add: novamente tentando descobrir o erro

--- a/microservices/exemplo-service/src/main/resources/application.properties
+++ b/microservices/exemplo-service/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=exemplo-service
 
-# Spring Cloud Config
-spring.cloud.config.uri=http://localhost:8888/config
+# Config Server
+spring.config.import=optional:configserver:http://localhost:8888/config/
+
+# Eureka Client (opcional, se quiser se registrar)
+eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
+eureka.instance.prefer-ip-address=false
+eureka.instance.hostname=localhost
