--- a/microservices/exemplo-service/src/main/resources/application.properties
+++ b/microservices/exemplo-service/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=exemplo-service
-
-# Config Server
-spring.config.import=optional:configserver:http://localhost:8888/config/
+server.port=8081
 
 # Eureka Client (opcional, se quiser se registrar)
 eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
