--- a/microservices/exemplo-service/src/main/resources/application.properties
+++ b/microservices/exemplo-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=exemplo-service
 server.port=8081
 
-# Eureka Client (opcional, se quiser se registrar)
-eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
-eureka.instance.prefer-ip-address=false
+# Eureka Client
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
