--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -7,7 +7,8 @@ logging.level.org.springframework.security=DEBUG
 
 
 # Eureka Client
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+# EUREKA_SERVER_URL estará descrito no docker-compose
+eureka.client.serviceUrl.defaultZone= ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 
