--- a/microservices/auth-service/src/main/resources/application.properties
+++ b/microservices/auth-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=auth-service
+server.port=8083
+
+# Eureka Client
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
