--- a/microservices/book-service/src/main/resources/application.properties
+++ b/microservices/book-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=book-service
+server.port=8084
+
+# Eureka Client
+# EUREKA_SERVER_URL estara descrito no docker-compose
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+
+# api.security.token.secret = ${JWT_SECRET:chave-default-tests}
