--- a/microservices/auth-service/pom.xml
+++ b/microservices/auth-service/pom.xml
@@ -97,7 +97,16 @@
             <artifactId>java-jwt</artifactId>
             <version>4.4.0</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!-- Apache HttpClient para Feign (melhor controle de timeouts) -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
