--- a/microservices/auth-service/src/main/resources/application.yaml
+++ b/microservices/auth-service/src/main/resources/application.yaml
@@ -20,8 +20,8 @@ eureka:
 auth:
   jwt:
     secret-env-var: ${AUTH_JWT_SECRET:default-secret-key}
-    access-token-exp-ms: ${AUTH_ACCESS_EXP_MS:900000}
-    refresh-token-exp-ms: ${AUTH_REFRESH_EXP_MS:604800000}
+    access-token-exp-ms: ${AUTH_ACCESS_EXP_MS:900000}       # 15 minutos
+    refresh-token-exp-ms: ${AUTH_REFRESH_EXP_MS:604800000}  # 7 dias
 
 jwt:
   refreshExpirationMs: 86400000
