--- a/microservices/auth-service/src/main/resources/application.yaml
+++ b/microservices/auth-service/src/main/resources/application.yaml
@@ -1,11 +1,24 @@
+server:
+  port: 8083
+
 spring:
   application:
     name: auth-service
+  datasource:
+    url: ${SPRING_DATASOURCE_URL_AUTH}
+    username: ${SPRING_DATASOURCE_USERNAME_AUTH}
+    password: ${SPRING_DATASOURCE_PASSWORD_AUTH}
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
-server:
-  port: 8083
+      ddl-auto: ${AUTH_DB_DDL_AUTO:create}
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+  config:
+    import: optional:file:.env[.properties]
 
 # Eureka Client
 eureka:
