infra: rota do auth-service no gateway e script de inicializacao de multiplos BDs

--- a/docker/docker-compose.dev.yaml
+++ b/docker/docker-compose.dev.yaml
@@ -8,8 +8,10 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 12345678
+      POSTGRES_MULTIPLE_DATABASES: auth_db,user_db
     volumes:
       - pgdata-dev:/var/lib/postgresql/data
+      - ./init-multiple-databases.sh:/docker-entrypoint-initdb.d/init-multiple-databases.sh
     networks:
       - livo-network
 
