--- a/microservices/auth-service/src/main/resources/application.yaml
+++ b/microservices/auth-service/src/main/resources/application.yaml
@@ -18,13 +18,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   config:
-    import: optional:file:.env[.properties]
+    import: optional:file:./.env[.properties]
 
 # Eureka Client
 eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
+    register-with-eureka: true
+    fetch-registry: true
   instance:
     prefer-ip-address: true
     hostname: localhost
