--- a/microservices/auth-service/src/main/resources/application-test.yaml
+++ b/microservices/auth-service/src/main/resources/application-test.yaml
@@ -4,6 +4,7 @@ spring:
     url: jdbc:h2:mem:testdb
     username: sa
     password:
+    driver-class-name: org.h2.Driver
 
 # H2 Client
   h2:
@@ -11,9 +12,13 @@ spring:
       enabled: true
       path: /h2-console
   
-# Show SQL
+# JPA Configuration
   jpa:
+    hibernate:
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+    open-in-view: false
