--- a/docker/docker-compose.staging.yaml
+++ b/docker/docker-compose.staging.yaml
@@ -123,33 +123,58 @@ services:
       - postgres-user
       - discovery-server
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-user:5432/userdb
-      SPRING_DATASOURCE_USERNAME: user
-      SPRING_DATASOURCE_PASSWORD: 12345678
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-server:8761/eureka/
+      APP_PROFILE: staging
+      SPRING_DATASOURCE_URL: ${USER_SPRING_DATASOURCE_URL_DOCKER}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
     networks:
       - livo-network
 
   # ---------------------- #
-  # 📚 LIBRARY SERVICE     #
+  # 📚 BOOK SERVICE        #
   # ---------------------- #
-  library-service:
+  book-service:
     build:
-      context: ../microservices/library-service
+      context: ../microservices/book-service
       dockerfile: Dockerfile
-    container_name: library-service
+    container_name: book-service
     ports:
-      - "8083:8083"
+      - "8084:8084"
     depends_on:
-      - postgres-library
+      - postgres-book
       - discovery-server
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-library:5432/librarydb
-      SPRING_DATASOURCE_USERNAME: library
-      SPRING_DATASOURCE_PASSWORD: 12345678
-      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery-server:8761/eureka/
+      APP_PROFILE: staging
+      SPRING_DATASOURCE_URL: ${BOOK_SPRING_DATASOURCE_URL_DOCKER}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
     networks:
       - livo-network
+
+
+#  # ---------------------- #
+#  # 🏛️ LIBRARY SERVICE     #
+#  # ---------------------- #
+#  library-service:
+#    build:
+#      context: ../microservices/library-service
+#      dockerfile: Dockerfile
+#    container_name: library-service
+#    ports:
+#      - "8083:8083"
+#    depends_on:
+#      - postgres-library
+#      - discovery-server
+#    environment:
+#      APP_PROFILE: staging
+#      SPRING_DATASOURCE_URL: ${LIBRARY_SPRING_DATASOURCE_URL_DOCKER}
+#      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+#      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+#      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+#    networks:
+#      - livo-network
 
 # ---------------------- #
 # 🌐 NETWORK & VOLUMES    #
@@ -162,6 +187,10 @@ volumes:
   pgdata-user:
     driver: local
   pgdata-library:
+    driver: local
+  pgdata-book:
+    driver: local
+  pgdata-review:
     driver: local
   pgadmindata-dev:
     driver: local
