--- a/microservices/book-service/src/main/resources/application.properties
+++ b/microservices/book-service/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=book-service
 server.port=8084
 
+spring.profiles.active=${APP_PROFILE:dev}
+spring.jpa.open-in-view=false
+logging.level.org.springframework.security=DEBUG
+
 # Eureka Client
-# EUREKA_SERVER_URL estara descrito no docker-compose
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 
-# api.security.token.secret = ${JWT_SECRET:chave-default-tests}
+# JWT Secret
+#api.security.token.secret=${JWT_SECRET:chave-default-tests}
