--- a/microservices/user-service/src/main/resources/application-staging.properties
+++ b/microservices/user-service/src/main/resources/application-staging.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # Eureka
 eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
