infra: adicionando Dockerfile de auth service

--- a/microservices/book-service/src/main/resources/application-dev.properties
+++ b/microservices/book-service/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5435/book_db
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345678}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-EUREKA_SERVER_URL=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+EUREKA_SERVER_URL=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-server:8761/eureka/}
 
 # JWT
 #JWT_SECRET=${JWT_SECRET:chave-default-tests}
