--- a/docker/docker-compose.staging.yaml
+++ b/docker/docker-compose.staging.yaml
@@ -12,7 +12,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${user_db}
+      POSTGRES_DB: ${USER_DB}
     volumes:
       - pgdata-user:/var/lib/postgresql/data
     networks:
