--- a/microservices/book-service/src/main/resources/application-dev.properties
+++ b/microservices/book-service/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Eureka
-EUREKA_SERVER_URL=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://discovery-server:8761/eureka/}
+EUREKA_SERVER_URL=http://localhost:8761/eureka/
 
 # JWT
-#JWT_SECRET=${JWT_SECRET:chave-default-tests}
+JWT_SECRET=${JWT_SECRET:chave-default-tests}
