--- a/microservices/oauth2-service/src/main/resources/application.yaml
+++ b/microservices/oauth2-service/src/main/resources/application.yaml
@@ -1,3 +1,40 @@
+server:
+  port: 8085
+
 spring:
   application:
     name: oauth2-service
+
+  datasource:
+    url: jdbc:h2:mem:oauth2db;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: YOUR_GOOGLE_CLIENT_ID
+            client-secret: YOUR_GOOGLE_CLIENT_SECRET
+            scope:
+              - openid
+              - profile
+              - email
+              - https://www.googleapis.com/auth/books
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
