--- a/microservices/oauth2-service/src/main/resources/application.yaml
+++ b/microservices/oauth2-service/src/main/resources/application.yaml
@@ -5,16 +5,6 @@ spring:
   application:
     name: oauth2-service
 
-  datasource:
-    url: jdbc:h2:mem:oauth2db;DB_CLOSE_DELAY=-1
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-
   security:
     oauth2:
       client:
@@ -26,13 +16,9 @@ spring:
               - openid
               - profile
               - email
-              - https://www.googleapis.com/auth/books
         provider:
           google:
-            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
-            token-uri: https://oauth2.googleapis.com/token
-            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
-            user-name-attribute: sub
+            issuer-uri: https://accounts.google.com
 
 eureka:
   client:
