--- a/microservices/oauth2-service/pom.xml
+++ b/microservices/oauth2-service/pom.xml
@@ -94,19 +94,34 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Google API Client para validar ID Tokens -->
+		<!-- Google API Client -->
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.google.oauth-client</groupId>
 			<artifactId>google-oauth-client</artifactId>
-			<version>1.39.0</version> <!-- ou outra versão disponível -->
+			<version>1.39.0</version>
 		</dependency>
 
+		<!-- Jackson necessário para Google API Client -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.15.2</version>
+		</dependency>
 
 	</dependencies>
 
