--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -24,3 +24,6 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
+
+jwt:
+  secret: ${AUTH_JWT_SECRET:default-secret-key-que-deve-ser-super-super-segura-ao-usuario}
