add: properties default

--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=library-service
+server.port=8085
+
+spring.jpa.open-in-view=false
+logging.level.org.springframework.security=DEBUG
+
+# Eureka Client
+# A URL do Eureka server será definida no docker-compose ou variável de ambiente
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=library-service
+
+# Segurança (JWT)
+# api.security.token.secret=${JWT_SECRET:library-dev-secret}
+
