add: properties de dev

--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=library-service
 server.port=8085
 
+spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
 logging.level.org.springframework.security=DEBUG
 
@@ -9,7 +10,4 @@ logging.level.org.springframework.security=DEBUG
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka/}
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=library-service
-
-# Segurança (JWT)
-# api.security.token.secret=${JWT_SECRET:library-dev-secret}
 
