--- a/microservices/auth-service/src/main/resources/application.yaml
+++ b/microservices/auth-service/src/main/resources/application.yaml
@@ -5,9 +5,7 @@ spring:
   application:
     name: auth-service
   profiles:
-    active: ${APP_PROFILE:test}
-  config:
-    import: optional:file:./.env[.properties]
+    active: ${APP_PROFILE:dev}
 
 # Eureka Client
 eureka:
