fix: inserindo rotas corretamente em api-gateway

--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -29,7 +29,7 @@ spring:
         - id: library-service
           uri: lb://library-service
           predicates:
-            - Path:/library/**
+            - Path=/library/**
 
 eureka:
   client:
