--- a/microservices/user-service/src/main/resources/application-dev.properties
+++ b/microservices/user-service/src/main/resources/application-dev.properties
@@ -17,4 +17,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
 # Security (JWT)
-api.security.token.secret=${JWT_SECRET:dev-secret-key}
+api.security.token.secret=${JWT_SECRET:jwt-secret-long-test-key-for-development}
