--- a/microservices/user-service/src/main/resources/application-staging.properties
+++ b/microservices/user-service/src/main/resources/application-staging.properties
@@ -14,4 +14,4 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=user-service
 
 # Security (JWT)
-api.security.token.secret=${JWT_SECRET:staging-secret-key}
+api.security.token.secret=${JWT_SECRET:jwt-secret-long-test-key-for-development}
