infra: urls de feign client de library funcionando em staging e developer

--- a/docker/docker-compose.staging.yaml
+++ b/docker/docker-compose.staging.yaml
@@ -212,6 +212,8 @@ services:
       SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      BOOK_SERVICE_URL: http://book-service:8084
+      USER_SERVICE_URL: http://user-service:8082
     networks:
       - livo-network
 
