--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -13,3 +13,7 @@ eureka.instance.hostname=localhost
 
 # Security (JWT)
 api.security.token.secret=${JWT_SECRET:jwt-secret-long-test-key-for-development}
+
+#FeignClient
+feign.client.config.book-service.url=${BOOK_SERVICE_URL:http://localhost:8084}
+feign.client.config.user-service.url=${USER_SERVICE_URL:http://localhost:8082}
