feat: tornando portas das aplicações dinâmicas

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=discovery-config-server
-server.port=8761
+server.port=${PORT:8761}
 
 # Eureka desligado (caso esteja junto no mesmo app)
 eureka.client.register-with-eureka=false
