--- a/microservices/book-service/src/main/resources/application.properties
+++ b/microservices/book-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=book-service
-server.port=8084
+server.port=${PORT:8084}
 
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
