--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=user-service
-server.port=8082
+server.port=${PORT:8082}
 
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
