--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=library-service
-server.port=8085
+server.port=${PORT:8085}
 
 spring.profiles.active=${APP_PROFILE:dev}
 spring.jpa.open-in-view=false
