config: padronizando os nomes das props de URL do Feign Client em todos os microsserviços

--- a/microservices/auth-service/src/main/resources/application.yaml
+++ b/microservices/auth-service/src/main/resources/application.yaml
@@ -30,6 +30,8 @@ jwt:
   refreshExpirationMs: 86400000
 
 # User Service Client Configuration
+user-service:
+  url: ${USER_SERVICE_URL:localhost:8082}
 user:
   service:
     # Token para autenticação entre serviços
