--- a/microservices/book-service/src/main/resources/application.properties
+++ b/microservices/book-service/src/main/resources/application.properties
@@ -11,5 +11,8 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.instance.non-secure-port=${PORT:8084}
 
+# Feign Clients
+library-service.url=${LIBRARY_SERVICE_URL:localhost:8085}
+
 # JWT Secret
 #api.security.token.secret=${JWT_SECRET:chave-default-tests}
