--- a/microservices/library-service/src/main/resources/application.properties
+++ b/microservices/library-service/src/main/resources/application.properties
@@ -16,5 +16,8 @@ eureka.instance.non-secure-port=${PORT:8085}
 api.security.token.secret=${JWT_SECRET:jwt-secret-long-test-key-for-development}
 
 #FeignClient
+book-service.url=${BOOK_SERVICE_URL:localhost:8084}
+user-service.url=${USER_SERVICE_URL:localhost:8082}
+
 feign.client.config.book-service.url=${BOOK_SERVICE_URL:http://localhost:8084}
 feign.client.config.user-service.url=${USER_SERVICE_URL:http://localhost:8082}
