--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -12,3 +12,6 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/e
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.instance.non-secure-port=${PORT:8082}
+
+# Feign Clients
+library-service.url=${LIBRARY_SERVICE_URL:localhost:8085}
